src/test/programs/errors/throw_from_catch_block.bas
#procedure
sub Main()
    try
        throw "AAA"
    catch
        throw "BBB"
    end try
end sub
--output--
Error
0
BBB
